--- a/inst/rmarkdown/templates/ndrmd1/resources/template_ndrmd1.html
+++ b/inst/rmarkdown/templates/ndrmd1/resources/template_ndrmd1.html
@@ -30,13 +30,15 @@ $endif$-->
     font-family: 'Times New Roman';
     font-weight: 600;
     font-size: 28px;
-    text-shadow: black 0.4em 0.4em 0.8em;
+    
   }
   .foot{
     font-size: 15px;
   }
   .wholetitle{
-    background-image: url("https://github.com/yyyoment/photos/raw/master/spotify334.jpg");
+    $if(bg)$
+    background-image: url("$bg$");
+    $endif$
     height: 690px; 
     max-width: 100%; !important;
     background-attachment: fixed;
@@ -171,7 +173,7 @@ $endfor$
 
 $if(color)$
 <style type="text/css">h1, .h1, h2, .h2, h3, .h3 {
-margin-top: 42px;
+margin-top: 54px;
 }
 h1 {
 padding-top: 100px;
@@ -184,7 +186,7 @@ font-size: 60px;
 color: $color$;
 letter-spacing: 6px;
 font-weight:900;
-text-shadow: black 0.4em 0.4em 0.8em;
+
 }
 pre {
 border: 0px solid #cccccc;
@@ -213,7 +215,7 @@ color: $color$;
 }
 
 #TOC {
-top: 5%;
+top: 10%;
 position: fixed;
 width: 210px;
 }
@@ -619,7 +621,7 @@ $endfor$
 
 
 &nbsp;
-<br><br><br><br>
+
 <hr />
 <p class="foot" style="text-align: center;">A work by <a href="https://github.com/$github$">$author$</a></p>
 <p class="foot" style="text-align: center;"><span style="color: #808080;"><em>$mail$</em></span></p>
