--- a/inst/rmarkdown/templates/ndrmd1/resources/template_ndrmd1.html
+++ b/inst/rmarkdown/templates/ndrmd1/resources/template_ndrmd1.html
@@ -201,6 +201,7 @@ font-weight:100;
 p {
 font-size: 18px;
 font-weight:500;
+padding:10px 0;
 }
 .pagedtable {
 overflow: auto;
@@ -289,7 +290,7 @@ $if(theme)$
 code {
   color: inherit;
   background-color: rgba(0, 0, 0, 0.04);
-  font-size: 30px;
+  font-size: 15px;
 }
 img {
   max-width:100%;
